testdata/baselines/reference/submodule/conformance/inferringClassStaticMembersFromAssignments.errors.txt
a.js(2,4): error TS2339: Property 'staticProp' does not exist on type '{ new (): C1; prototype: C1; }'.
a.js(8,4): error TS2339: Property 'staticProp' does not exist on type '{ new (): C2; prototype: C2; }'.
a.js(11,4): error TS2339: Property 'staticProp' does not exist on type '() => void'.
b.ts(4,14): error TS2339: Property 'staticProp' does not exist on type '{ new (): C1; prototype: C1; }'.
b.ts(5,14): error TS2339: Property 'staticProp' does not exist on type '{ new (): C2; prototype: C2; }'.
b.ts(7,14): error TS2339: Property 'staticProp' does not exist on type '() => void'.
b.ts(10,12): error TS2339: Property 'staticProp' does not exist on type '{ new (): C3; prototype: C3; }'.
b.ts(11,12): error TS2339: Property 'staticProp' does not exist on type '{ new (): C4; prototype: C4; }'.
b.ts(13,12): error TS2339: Property 'staticProp' does not exist on type '() => void'.
global.js(2,4): error TS2339: Property 'staticProp' does not exist on type '{ new (): C3; prototype: C3; }'.
global.js(8,4): error TS2339: Property 'staticProp' does not exist on type '{ new (): C4; prototype: C4; }'.
global.js(11,4): error TS2339: Property 'staticProp' does not exist on type '() => void'.


==== a.js (3 errors) ====
    export class C1 { }
    C1.staticProp = 0;
       ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type '{ new (): C1; prototype: C1; }'.
    
    export function F1() { }
    F1.staticProp = 0;
    
    export var C2 = class { };
    C2.staticProp = 0;
       ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type '{ new (): C2; prototype: C2; }'.
    
    export let F2 = function () { };
    F2.staticProp = 0;
       ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type '() => void'.
    
==== global.js (3 errors) ====
    class C3 { }
    C3.staticProp = 0;
       ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type '{ new (): C3; prototype: C3; }'.
    
    function F3() { }
    F3.staticProp = 0;
    
    var C4 = class { };
    C4.staticProp = 0;
       ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type '{ new (): C4; prototype: C4; }'.
    
    let F4 = function () { };
    F4.staticProp = 0;
       ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type '() => void'.
    
==== b.ts (6 errors) ====
    import * as a from "./a";
    var n: number;
    
    var n = a.C1.staticProp;
                 ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type '{ new (): C1; prototype: C1; }'.
    var n = a.C2.staticProp;
                 ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type '{ new (): C2; prototype: C2; }'.
    var n = a.F1.staticProp;
    var n = a.F2.staticProp;
                 ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type '() => void'.
    
    
    var n = C3.staticProp;
               ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type '{ new (): C3; prototype: C3; }'.
    var n = C4.staticProp;
               ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type '{ new (): C4; prototype: C4; }'.
    var n = F3.staticProp;
    var n = F4.staticProp;
               ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type '() => void'.
    